# Quillect

./: .env.example  .gitignore  Docker-compose.yml  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/routes/: generate.py  upload.py
backend/services/: agent_service.py  llm_service.py  pdf_service.py
backend/tools/: document_tools.py
frontend/: Dockerfile  next.config.mjs  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentLog.tsx  DocumentForm.tsx  DocumentPreview.tsx  LoadingState.tsx
frontend/src/utils/: api.ts
